templates/ha-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: '@every 5m'
    keel.sh/trigger: poll
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant-label
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homeassistant-label
    spec:
#      hostNetwork: true
      nodeSelector:
        kubernetes.io/hostname: spottypi
      containers:
      - name: homeassistant
        image: homeassistant/home-assistant:2024.7.1
        ports:
          - containerPort: 8123
        resources: {}
        volumeMounts:
          - mountPath: /config
            name: homeassistant-pv-config
          - mountPath: /etc/localtime
            name: homeassistant-pv-time
            readOnly: true
        resources:
          requests:
            memory: 512Mi
            cpu: 200m
          limits:
            memory: 1Gi
            cpu: 1
      restartPolicy: Always
      volumes:
        - name: homeassistant-pv-config
          persistentVolumeClaim:
            claimName: homeassistant-pv-config
        - name: homeassistant-pv-time
          persistentVolumeClaim:
            claimName: homeassistant-pv-time
            readOnly: true
status: {}
