templates/ha-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
  namespace: homeassistant
  labels:
    app: homeassistant-label
spec:
  selector:
    app: homeassistant-label
  ports:
  - name: homeassistant
    port: 8123
    targetPort: homeassistant
