templates/z2m-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: z2m-service
  namespace: homeassistant
  labels:
    app: z2m
spec:
  type: LoadBalancer
  selector:
    app: z2m
  ports:
  - name: z2m
    port: 8081
    targetPort: z2m
    protocol: TCP
