templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeassistant
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: homeassistant.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: homeassistant-service
            port:
              name: homeassistant
  - host: z2m.homeassistant.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: z2m-service
            port:
              name: z2m
  - host: mqtt.homeassistant.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mosquitto-service
            port:
              name: mqtt
